<resources>
    <string name="app_name">Event Organier</string>
    <string name="subuh">Subuh</string>
    <string name="magrib">Maghrib</string>
    <string name="duhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="isya">Isya</string>
    <string name="waktu">04 : 27</string>
    <string name="kiblat">Qiblat</string>
    <string name="cuaca">Cuaca</string>
    <string name="event">Event</string>
    <string name="scan_tiket">Scan E-Ticket anda</string>
    <string name="quran_dikir">Dzikir</string>
    <string name="in_event">Login untuk melihat Event</string>
    <string name="quran">Al Quran</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="keluar">Keluar</string>
    <string name="event_aktif">Event Aktif</string>
    <string name="event_selesai">Event Selesai</string>
    <string name="event_saya">Event Saya</string>
    <string name="event_not_found">belum ada event</string>
    <string name="loading">Loading</string>
    <string name="progress_loading">Mohon tunggu sebentar ya, sedang proses</string>
    <string name="Failed">Failed</string>
    <string name="faildesc">Barcode gagal discan, coba cek ulang apakah barcode salah atau sudah usang\n</string>
    <string name="btnRescan">Scan kembali</string>
    <string name="login_sebagai_tenant">Login sebagai Tenant</string>
    <string name="check_email_text">Check email untuk mendapatkan list event</string>
    <string name="email">Email</string>
    <string name="check_email">Check Email</string>
    <string name="login_tenant">Login Tenant</string>
    <string name="list_event">List Event</string>
    <string name="nama_event">Nama Event</string>
    <string name="nama_organizer">Nama Organizer</string>
    <string name="check_event">Check Event</string>
    <string name="idcheckin">ID</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="No_telepon">No Telepon</string>
    <string name="tanggalcekin">Tanggal Check-in</string>
    <string name="searchbar_hint">Cari riwayat check-in</string>
    <string name="btn_lihat_detail">Lihat Detail</string>
    <string name="failed_scan_tenant">Tiket Tidak Ditemukan</string>
    <string name="gagal_scan">Barcode gagal discan</string>
    <string name="id_tiket">ID Tiket</string>
    <string name="nama_visitor">Nama Visitor</string>
    <string name="berhasil_terdaftar">Berhasil terdaftar!</string>
    <string name="selesai">Selesai</string>
    <string name="total_pengunjung">Total Pengunjung</string>
    <string name="J_0">0</string>
    <string name="detail_tenant">Detail Tenant</string>
    <string name="nama_tenant">Nama Tenant</string>
    <string name="kode_tenant">Kode Tenant</string>
    <string name="detail_event">Detail Event</string>
    <string name="semua">Semua</string>
    <string name="on_going">On-Going</string>
    <string name="Not_found">Data tidak ditemukan</string>
    <string name="list_logchekin_tenant">Daftar Log Check In</string>
    <string name="events">Events</string>
    <string name="kode_booking">Kode Booking</string>
    <string name="nama_tiket">Nama Tiket</string>
    <string name="retry">Coba Lagi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_user">Manage User</string>
    <string name="transaksi_event">Transaksi Event</string>
    <string name="oleh">Oleh :</string>
    <string name="jenis_event">Jenis Event</string>
    <string name="tanggal_dan_waktu">Tanggal dan waktu</string>
    <string name="lokasi">Lokasi</string>
    <string name="alamat">Alamat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="searchbar_hint_basic">Cari</string>
    <string name="TambahkanUser">Tambahkan User Baru</string>
    <string name="Delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="tanggal_daftar">Tanggal daftar</string>
    <string name="error_password_8">Password harus terdiri dari minimal 8 karakter</string>
    <string name="error_password_requirements">Password harus terdiri dari huruf kapital, huruf kecil, dan angka</string>
    <string name="password_meets_criteria">Password telah memenuhi kriteria</string>
    <string name="error_password_mismatch">Password tidak sesuai</string>
    <string name="password_matches">Password cocok</string>
    <string name="error_email">Email tidak valid</string>
    <string name="general">General</string>
    <string name="nama">Nama</string>
    <string name="role">Role</string>
    <string name="kasir">Kasir</string>
    <string name="simpan_data">Simpan</string>
    <string name="admin">Admin</string>
    <string name="tenant">Tenant</string>
    <string name="pilih_role">Pilih Role</string>
    <string name="wajib_ic">*</string>
    <string name="text_info_pass">Harus terdiri dari huruf kapital, huruf kecil, dan angka</string>
    <string name="cari">Cari</string>
    <string name="no_order">No. Order</string>
    <string name="tanggal_invoice">Tanggal</string>
    <string name="tipe_pengguna">Tipe Pengguna</string>
    <string name="Aksi">Aksi</string>
    <string name="Detail_transaksi">Detail Transaksi</string>
    <string name="qty">Qty</string>
    <string name="harga">Harga</string>
    <string name="tanggal_mulai_penjualan">Tanggal Mulai Penjualan</string>
    <string name="total">Total</string>
    <string name="link_toko_anda">Link toko anda:</string>
    <string name="berbagi.link">berbagi.link/isabnumaryam/online…</string>
    <string name="lihat_preview_halaman_toko">Lihat Preview Halaman Toko</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="halaman">Halaman</string>
    <string name="toko">Toko</string>
    <string name="medial_sosial_toko">Medial Sosial Toko</string>
    <string name="transaksi">Transaksi</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="beranda">Beranda</string>
    <string name="ubah_tampilan">Ubah Tampilan</string>
    <string name="statistik">Statistik</string>
    <string name="bagi_to">Bagi.to</string>
    <string name="tagihan">Tagihan</string>
    <string name="tracking_pixels">Tracking Pixels</string>
    <string name="toko_online">Toko Online</string>
    <string name="payment">Payment</string>
    <string name="wallet">Wallet</string>
    <string name="support">Support</string>
    <string name="donasi">Donasi</string>
    <string name="landing_page">Landing Page</string>
    <string name="status_toko_aktif">Status Toko (Aktif)</string>
    <string name="aktifkan_atau_non_aktifkan_toko">Aktifkan atau non aktifkan toko </string>
    <string name="foto_profil_toko">Foto Profil Toko</string>
    <string name="tambahkan_foto_profil">Tambahkan Foto Profil</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="masukkan_nama_toko">Masukkan nama toko</string>
    <string name="bio">Bio</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="lokasi_toko">Lokasi Toko</string>
    <string name="provinsi">Povinsi</string>
    <string name="pilih_provinsi">Pilih Provinsi</string>
    <string-array name="list_provinsi">
        <item name="dki_jakarta">DKI Jakarta</item>
        <item name="jawa_barat">Jawa Barat</item>
        <item name="jawa_tengah">Jawa Tengah</item>
    </string-array>
    <string name="kabupaten">Kabupaten</string>
    <string name="pilih_kabupaten">Pilih Kabupaten</string>
    <string-array name="list_kabupaten">
        <item name="dki_jakarta">DKI Jakarta</item>
        <item name="jawa_barat">Jawa Barat</item>
        <item name="jawa_tengah">Jawa Tengah</item>
    </string-array>
    <string name="kecamatan">Kecamatan</string>
    <string-array name="list_kecamatan">
        <item name="dki_jakarta">DKI Jakarta</item>
        <item name="jawa_barat">Jawa Barat</item>
        <item name="jawa_tengah">Jawa Tengah</item>
    </string-array>
    <string name="pilih_kecamatan">Pilih Kecamatan</string>
    <string name="alamat_detail_toko">Alamat Detail Toko</string>
    <string name="deskripsi_footer">Deskripsi / pesan di footer halaman (bagian paling bawah)</string>
    <string name="deskripsi_media_sosial_toko">Akan menjadi icon di footer yang menuju  ke halaman-halaman media sosial toko anda</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="number_example">08XXXXXXXX</string>
    <string name="disclaimer_phone">Costumer akan menghubungi anda melalui nomor ini jika ingin bertanya tentang barang atau toko</string>
    <string name="isi_chat_otomatis_whatsapp">Isi Chat Otomatis Whatsapp</string>
    <string name="placeholder_chat_otomatis_whatsapp">contoh: Halo, kak. Saya mau tanya produk dong</string>
    <string name="username_instagram">Username Instagram</string>
    <string name="placeholder_username_instagram">contoh: muhammad_12</string>
    <string name="link_facebook">Link Facebook</string>
    <string name="placeholder_link_facebook">Masukkan link facebook</string>
    <string name="link_youtube">Link Youtube</string>
    <string name="placeholder_link_youtube">Masukkan link youtube</string>
    <string name="link_tiktok">Link Tiktok</string>
    <string name="placeholder_link_tiktok">Masukkan link tiktok</string>
    <string name="link_tokopedia">Link Tokopedia</string>
    <string name="placeholder_link_tokopedia">Masukkan link tokopedia</string>
    <string name="link_shoope">Link Shoope</string>
    <string name="placeholder_link_shoope">Masukkan link shoope</string>
    <string name="aktifkan_kode_unik">Aktifkan Kode Unik</string>
    <string name="deskripsi_kode_unik">Untuk mempermudah pengecakan jumlah transfer pelanggan </string>
    <string name="aktifkan_pembayaran_otomatis">Aktifkan Pembayaran Automatis melalui Virtual Account</string>
    <string name="deskripsi_pembayaran_otomatis">Konfirmasi pembayaran yaitu secara otomatis dengan Virtual Account Bank</string>
    <string name="aktifkan_mutasi_bank">Aktifkan Mutasi Bank untuk Pembayaran Otomatis</string>
    <string name="deskripsi_mutasi_bank">Untuk menggunakan fitur ini, anda harus mengaktifkan mutasi bank pada menu profil. Fitur ini mempermudah konfirmasi pembayaran secara otomatis dengan kode unik. </string>
    <string name="link">Link</string>
    <string name="jakarta_indonesia">Jakarta, Indonesia</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="jenis_bank">Jenis Bank</string>
    <string name="bank">Bank</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="placeholder_nama_pemilik">Masukkan nama pemilik</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="tambah_kategori">Tambah Kategori</string>
    <string name="placeholder_kategori_tambah">contoh : Makanan/Minuman/Pakaian Pria</string>
    <string name="tambah_anggota">Tambah Anggota</string>
    <string name="nama_anggota">Nama Anggota</string>
    <string name="no_hp">No. HP</string>
    <string name="A_n_rekening">A.n Rekening</string>
    <string name="aktifkan_voucher">Aktifkan Voucher?</string>
    <string name="pilih_voucher">Pilih Voucher?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="alamat_anggota">Alamat Anggota</string>
    <string name="placeholder_nama_anggota">Masukkan nama anggota</string>
    <string name="placeholder_email">contoh: example@gmail.com</string>
    <string name="placeholder_metode_pembayaran">contoh: example@gmail.com</string>
    <string name="placeholder_nama_rekening">Masukkan nama rekening</string>
    <string name="placeholder_nama_pemilik_rekening">Masukkan nama pemilik rekening</string>
    <string name="placeholder_alamat_anggota">contoh: Jalan Fatmawati 24, Kota Lorem Ipsum</string>
</resources>