<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_500"
        android:padding="16dp"
        android:orientation="vertical">

        <!-- Header Back Button -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/tambah_anggota"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">


                <!-- Jenis Pengecekan Pembayaran -->
                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/nama_anggota" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:hint="@string/placeholder_nama_anggota">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/no_hp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:hint="@string/number_example">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/email" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:hint="@string/placeholder_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/metode_pembayaran" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:hint="@string/placeholder_metode_pembayaran">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Payment Method -->
                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/metode_pembayaran" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/enabled_selected">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="true"
                        android:text="@string/bank" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checked="false"
                        android:enabled="true"
                        android:text="@string/e_wallet" />
                </RadioGroup>

                <!-- Account Owner Name Input -->
                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/jenis_bank" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:hint="@string/placeholder_nama_pemilik">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/nomor_rekening" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:hint="@string/placeholder_nama_rekening">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/A_n_rekening" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:hint="@string/placeholder_nama_pemilik_rekening">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/aktifkan_voucher" />
                <!-- Radio Group for Payment Check Type -->

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/enabled_selected">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="true"
                        android:text="@string/ya" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checked="false"
                        android:enabled="true"
                        android:text="@string/tidak" />
                </RadioGroup>

                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/pilih_voucher" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldProvinsi"
                    style="@style/DropdownTextInputLayout"
                    android:hint="@string/voucher_diskon_11.11"
                    app:endIconDrawable="@drawable/ic_arrow_down_toska"
                    app:endIconTint="@color/blue_500">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:drawableStart="@drawable/bank_mandiri"
                        android:drawablePadding="8dp"
                        android:inputType="none"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Account Number Input -->
                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/alamat_anggota" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:hint="@string/placeholder_alamat_anggota">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:minLines="3"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Action Buttons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="24dp">

                    <Button
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/batal"
                        android:textStyle="bold"
                        app:strokeColor="@color/biru_toska" />

                    <Button
                        style="@style/Widget.Material3.Button.IconButton.Filled"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/simpan"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>