<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header Back Button -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backTambahKategori"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/tambah_kategori"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="8dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Account Owner Name Input -->
                <TextView
                    style="@style/TextFieldTitle"
                    android:text="@string/nama_kategori" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:hint="@string/placeholder_kategori_tambah">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/neutral_50" />

                <!-- Action Buttons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="24dp">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/colorSurfaceVariant"
                        android:text="@string/batal"
                        android:textColor="?attr/colorOnSurface" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/colorPrimary"
                        android:text="@string/simpan"
                        android:textColor="?attr/colorOnPrimary" />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
